[package]
name = "coroutine"
version = "0.5.0"
authors = [
    "Y. T. Chung <zonyitoo@gmail.com>",
    "Young.Wu <doomsplayer@gmail.com>",
    "Rustcc Developers"
]
license = "MIT/ISC"
repository = "https://github.com/rustcc/coroutine-rs"
description = "Coroutine Library in Rust"
readme = "README.md"
homepage = "https://github.com/rustcc/coroutine-rs"
keywords = ["coroutine", "green", "thread", "fiber"]

[build-dependencies]
gcc = "^0.3.26"
log = "^0.3.5"

[lib]
name = "coroutine"
path = "src/lib.rs"

[dependencies]
libc = "^0.1.10"
context = "1.0"
log = "^0.3.5"

[dev-dependencies]
num_cpus = "^0.2.11"
